src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__edge_struct_vs_block_disambiguation.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 4,
                        end: 5,
                        start_line: 2,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [
                            Expr {
                                expr: Expr {
                                    kind: If {
                                        condition: Expr {
                                            kind: Path(
                                                ExprPath {
                                                    segments: [
                                                        ExprPathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 2,
                                                                },
                                                                span: Span {
                                                                    start: 17,
                                                                    end: 21,
                                                                    start_line: 3,
                                                                    start_col: 8,
                                                                },
                                                            },
                                                            args: None,
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 17,
                                                        end: 21,
                                                        start_line: 3,
                                                        start_col: 8,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 17,
                                                end: 21,
                                                start_line: 3,
                                                start_col: 8,
                                            },
                                        },
                                        then_branch: Block {
                                            statements: [],
                                            expr: Some(
                                                Expr {
                                                    kind: Path(
                                                        ExprPath {
                                                            segments: [
                                                                ExprPathSegment {
                                                                    name: Spanned {
                                                                        node: SymbolU32 {
                                                                            value: 3,
                                                                        },
                                                                        span: Span {
                                                                            start: 24,
                                                                            end: 25,
                                                                            start_line: 3,
                                                                            start_col: 15,
                                                                        },
                                                                    },
                                                                    args: None,
                                                                },
                                                            ],
                                                            span: Span {
                                                                start: 24,
                                                                end: 25,
                                                                start_line: 3,
                                                                start_col: 15,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 24,
                                                        end: 25,
                                                        start_line: 3,
                                                        start_col: 15,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 22,
                                                end: 27,
                                                start_line: 3,
                                                start_col: 13,
                                            },
                                        },
                                        else_branch: None,
                                    },
                                    span: Span {
                                        start: 14,
                                        end: 27,
                                        start_line: 3,
                                        start_col: 5,
                                    },
                                },
                                has_semi: false,
                            },
                            Let {
                                pattern: Pattern {
                                    kind: Ident {
                                        by_ref: false,
                                        mutable: false,
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 4,
                                            },
                                            span: Span {
                                                start: 52,
                                                end: 53,
                                                start_line: 4,
                                                start_col: 9,
                                            },
                                        },
                                        subpattern: None,
                                    },
                                    span: Span {
                                        start: 52,
                                        end: 53,
                                        start_line: 4,
                                        start_col: 9,
                                    },
                                },
                                ty: None,
                                value: Some(
                                    Expr {
                                        kind: Record {
                                            path: Some(
                                                TypePath {
                                                    segments: [
                                                        TypePathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 5,
                                                                },
                                                                span: Span {
                                                                    start: 56,
                                                                    end: 61,
                                                                    start_line: 4,
                                                                    start_col: 13,
                                                                },
                                                            },
                                                            args: None,
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 56,
                                                        end: 61,
                                                        start_line: 4,
                                                        start_col: 13,
                                                    },
                                                },
                                            ),
                                            fields: [
                                                RecordExprField {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 3,
                                                        },
                                                        span: Span {
                                                            start: 64,
                                                            end: 65,
                                                            start_line: 4,
                                                            start_col: 21,
                                                        },
                                                    },
                                                    value: None,
                                                    span: Span {
                                                        start: 64,
                                                        end: 65,
                                                        start_line: 4,
                                                        start_col: 21,
                                                    },
                                                },
                                            ],
                                            base: None,
                                        },
                                        span: Span {
                                            start: 56,
                                            end: 67,
                                            start_line: 4,
                                            start_col: 13,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 48,
                                    end: 68,
                                    start_line: 4,
                                    start_col: 5,
                                },
                            },
                        ],
                        expr: Some(
                            Expr {
                                kind: Record {
                                    path: None,
                                    fields: [
                                        RecordExprField {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 85,
                                                    end: 86,
                                                    start_line: 5,
                                                    start_col: 7,
                                                },
                                            },
                                            value: Some(
                                                Expr {
                                                    kind: Literal(
                                                        Literal {
                                                            kind: Int {
                                                                value: 10,
                                                                suffix: None,
                                                            },
                                                            span: Span {
                                                                start: 88,
                                                                end: 90,
                                                                start_line: 5,
                                                                start_col: 10,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 88,
                                                        end: 90,
                                                        start_line: 5,
                                                        start_col: 10,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 85,
                                                end: 90,
                                                start_line: 5,
                                                start_col: 7,
                                            },
                                        },
                                    ],
                                    base: None,
                                },
                                span: Span {
                                    start: 83,
                                    end: 92,
                                    start_line: 5,
                                    start_col: 5,
                                },
                            },
                        ),
                        span: Span {
                            start: 8,
                            end: 125,
                            start_line: 2,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 1,
                    end: 125,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 125,
        start_line: 2,
        start_col: 1,
    },
}
