src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__edge_try_chain_with_method.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Field {
                                    base: Expr {
                                        kind: MethodCall {
                                            receiver: Expr {
                                                kind: MethodCall {
                                                    receiver: Expr {
                                                        kind: MethodCall {
                                                            receiver: Expr {
                                                                kind: Field {
                                                                    base: Expr {
                                                                        kind: MethodCall {
                                                                            receiver: Expr {
                                                                                kind: Path(
                                                                                    ExprPath {
                                                                                        segments: [
                                                                                            ExprPathSegment {
                                                                                                name: Spanned {
                                                                                                    node: SymbolU32 {
                                                                                                        value: 2,
                                                                                                    },
                                                                                                    span: Span {
                                                                                                        start: 9,
                                                                                                        end: 10,
                                                                                                        start_line: 1,
                                                                                                        start_col: 10,
                                                                                                    },
                                                                                                },
                                                                                                args: None,
                                                                                            },
                                                                                        ],
                                                                                        span: Span {
                                                                                            start: 9,
                                                                                            end: 10,
                                                                                            start_line: 1,
                                                                                            start_col: 10,
                                                                                        },
                                                                                    },
                                                                                ),
                                                                                span: Span {
                                                                                    start: 9,
                                                                                    end: 10,
                                                                                    start_line: 1,
                                                                                    start_col: 10,
                                                                                },
                                                                            },
                                                                            method: Spanned {
                                                                                node: SymbolU32 {
                                                                                    value: 3,
                                                                                },
                                                                                span: Span {
                                                                                    start: 10,
                                                                                    end: 11,
                                                                                    start_line: 1,
                                                                                    start_col: 11,
                                                                                },
                                                                            },
                                                                            type_args: None,
                                                                            args: [],
                                                                        },
                                                                        span: Span {
                                                                            start: 9,
                                                                            end: 11,
                                                                            start_line: 1,
                                                                            start_col: 10,
                                                                        },
                                                                    },
                                                                    field: Named(
                                                                        Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 4,
                                                                            },
                                                                            span: Span {
                                                                                start: 12,
                                                                                end: 13,
                                                                                start_line: 1,
                                                                                start_col: 13,
                                                                            },
                                                                        },
                                                                    ),
                                                                },
                                                                span: Span {
                                                                    start: 9,
                                                                    end: 13,
                                                                    start_line: 1,
                                                                    start_col: 10,
                                                                },
                                                            },
                                                            method: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 3,
                                                                },
                                                                span: Span {
                                                                    start: 13,
                                                                    end: 14,
                                                                    start_line: 1,
                                                                    start_col: 14,
                                                                },
                                                            },
                                                            type_args: None,
                                                            args: [],
                                                        },
                                                        span: Span {
                                                            start: 9,
                                                            end: 14,
                                                            start_line: 1,
                                                            start_col: 10,
                                                        },
                                                    },
                                                    method: Spanned {
                                                        node: SymbolU32 {
                                                            value: 5,
                                                        },
                                                        span: Span {
                                                            start: 15,
                                                            end: 16,
                                                            start_line: 1,
                                                            start_col: 16,
                                                        },
                                                    },
                                                    type_args: None,
                                                    args: [],
                                                },
                                                span: Span {
                                                    start: 9,
                                                    end: 18,
                                                    start_line: 1,
                                                    start_col: 10,
                                                },
                                            },
                                            method: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 18,
                                                    end: 19,
                                                    start_line: 1,
                                                    start_col: 19,
                                                },
                                            },
                                            type_args: None,
                                            args: [],
                                        },
                                        span: Span {
                                            start: 9,
                                            end: 19,
                                            start_line: 1,
                                            start_col: 10,
                                        },
                                    },
                                    field: Named(
                                        Spanned {
                                            node: SymbolU32 {
                                                value: 6,
                                            },
                                            span: Span {
                                                start: 20,
                                                end: 21,
                                                start_line: 1,
                                                start_col: 21,
                                            },
                                        },
                                    ),
                                },
                                span: Span {
                                    start: 9,
                                    end: 21,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 23,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 23,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 23,
        start_line: 1,
        start_col: 1,
    },
}
